--- a/attach_config.json
+++ b/attach_config.json
@@ -1,6 +1,8 @@
 {
+    "Image PAth Prefix": "",
   "Show PDF?": "Yes",
-  "File Path Prefix": "https://transparencytoolkit.org/NSA-Data/docs/",
+    "File Path Prefix": "https://transparencytoolkit.org/NSA-Data/docs/",
+    "Local or Remote File": "remote",
   "File Path Attr": "pdf_paths",
   "Show Webpage?": "Yes",
   "Web URL": "article_links"
