--- a/attach_config.json
+++ b/attach_config.json
@@ -1,5 +1,5 @@
 {
-    "Image PAth Prefix": "",
+    "Image Path Prefix": "",
   "Show PDF?": "Yes",
     "File Path Prefix": "https://transparencytoolkit.org/NSA-Data/docs/",
     "Local or Remote File": "remote",
