--- a/attach_config.json
+++ b/attach_config.json
@@ -1,8 +1,8 @@
 {
-    "Image Path Prefix": "",
+  "Image Path Prefix": "",
   "Show PDF?": "Yes",
-    "File Path Prefix": "https://transparencytoolkit.org/NSA-Data/docs/",
-    "Local or Remote File": "remote",
+  "File Path Prefix": "https://edwardsnowden.com/docs/docs/",
+  "Local or Remote File": "remote",
   "File Path Attr": "pdf_paths",
   "Show Webpage?": "Yes",
   "Web URL": "article_links"
